Fix text wrapping around profile picture

--- a/_styles.css
+++ b/_styles.css
@@ -27,28 +27,29 @@ h2 {
 }
 
 #headshot {
-  height: 75px;
-  vertical-align: top;
+  float: right;
+  clear: both;
 }
+
 
 .image-cropper {
   width: 125px;
   height: 125px;
-  margin-right: 8%;
-  position: relative;
+  float: right;
   overflow: hidden;
   border-radius: 50%;
   border-style: solid;
   border-width: 1px;
+  padding: 0px;
+  clip-path: circle();
+  shape-outside: circle(50%);
 }
 
 .headshot-pic {
-  display: inline;
-  margin: 0 auto;
   margin-left: 8%;
   height: 100%;
   width: auto;
-  transform: scale(1.25);
+  transform: scale(1.3);
 }
 
 #header {
